// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveBar should render save bar COMPLETED 1`] = `
<div
  className="sc-gsnTZi inNsmg save-bar"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="linear sc-hKMtZM iMAzZ"
    data-react-toolbox="progress-bar"
  >
    <div>
      <span
        data-ref="buffer"
        style={
          Object {
            "MsTransform": "scaleX(0)",
            "WebkitTransform": "scaleX(0)",
            "transform": "scaleX(0)",
          }
        }
      />
      <span
        className="value"
        data-ref="value"
        style={
          Object {
            "MsTransform": "scaleX(1)",
            "WebkitTransform": "scaleX(1)",
            "transform": "scaleX(1)",
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-dkzDqf cHvrpJ"
  >
    SAVED
  </div>
  <div
    className="sc-bczRLJ ebzdUU"
  />
</div>
`;

exports[`SaveBar should render save bar FAILED 1`] = `
<div
  className="sc-gsnTZi inNsmg save-bar"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="linear sc-hKMtZM kNpZLY"
    data-react-toolbox="progress-bar"
  >
    <div>
      <span
        data-ref="buffer"
        style={
          Object {
            "MsTransform": "scaleX(0)",
            "WebkitTransform": "scaleX(0)",
            "transform": "scaleX(0)",
          }
        }
      />
      <span
        className="value"
        data-ref="value"
        style={
          Object {
            "MsTransform": "scaleX(1)",
            "WebkitTransform": "scaleX(1)",
            "transform": "scaleX(1)",
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-dkzDqf fPMXEw"
  >
    SAVE FAILED
  </div>
  <div
    className="sc-bczRLJ ebzdUU"
  />
</div>
`;

exports[`SaveBar should render save bar IN_PROGRESS 1`] = `
<div
  className="sc-gsnTZi inNsmg save-bar"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="linear sc-hKMtZM gAcahL"
    data-react-toolbox="progress-bar"
  >
    <div>
      <span
        data-ref="buffer"
      />
      <span
        className="value"
        data-ref="value"
      />
    </div>
  </div>
  <div
    className="sc-dkzDqf dWlItn"
  >
    SAVING
  </div>
  <div
    className="sc-bczRLJ ebzdUU"
  />
</div>
`;
